--- a/angular.json
+++ b/angular.json
@@ -3,17 +3,21 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "inclusiveit": {
+    "inclusive-it": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
-      "schematics": {},
+      "prefix": "iit",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "sass"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/inclusiveit",
+            "outputPath": "dist/inclusive-it",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/normalize.css/normalize.css",
+              "src/styles.sass"
             ],
             "scripts": []
           },
@@ -50,18 +55,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "inclusiveit:build"
+            "browserTarget": "inclusive-it:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "inclusiveit:build:production"
+              "browserTarget": "inclusive-it:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "inclusiveit:build"
+            "browserTarget": "inclusive-it:build"
           }
         },
         "test": {
@@ -72,7 +77,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": [],
             "assets": [
@@ -95,7 +100,7 @@
         }
       }
     },
-    "inclusiveit-e2e": {
+    "inclusive-it-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +108,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "inclusiveit:serve"
+            "devServerTarget": "inclusive-it:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "inclusiveit:serve:production"
+              "devServerTarget": "inclusive-it:serve:production"
             }
           }
         },
@@ -123,5 +128,5 @@
       }
     }
   },
-  "defaultProject": "inclusiveit"
+  "defaultProject": "inclusive-it"
 }
