--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inclusiveit",
+  "name": "inclusive-it",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "node-sass": "^4.13.1",
+    "normalize.css": "^8.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
